--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <h1>小小逻辑题，看看你的脑袋好使不</h1>
-  <h2>小丽、小玲、小娟三个人一起去商场里买东西。她们都买了帽子、发夹、裙子、手套等等，每个人买的东西都不同。
+  <h2>小丽、小玲、小娟三个人一起去商场里买东西。她们都买了发夹、裙子、手套。
     <br>请根据每个人说的话得出最终答案。</h2>
   <h3>注意：每个人都说了一半真话，一半假话！</h3>
   <span1>小丽说：“</span1>
