--- a/index.html
+++ b/index.html
@@ -7,38 +7,33 @@
   </script>
   <style>
   body{
-    padding-left: 10em;
     font-family: Georgia, "Times New Roman",
           Times, serif;
    color: purple;
    line-height:30px;
-   font-size:20px;
-   background-color: azure }
-   h1{padding-left: 11em;
-     color:black;
+   font-size:30px;
+   background-color: azure;
+ text-align:center}
+   h1{color:black;
      font-size:30px}
    h2{line-height:35px;
-   font-size:23px}
+   font-size:32px}
    h3{color:red;
-   font-size:17px}
-   span1{padding-left: 11em}
-   span2{padding-left: 11em}
-   span3{padding-left: 11em}
+   font-size:24px}
+   span{line-height:50px}
    button{margin-left: 5em;
      margin-right: 5em;
      margin-top: 1em;
      margin-bottom: 1em;
-     padding-left: 1em;
-   padding-right: 1em;
- font-size:20px}
+ font-size:25px}
 
 
    </style>
 </head>
 <body>
   <h1>小小逻辑题，看看你的脑袋好使不</h1>
-  <h2>小丽、小玲、小娟三个人一起去商场里买东西。她们都买了发夹、裙子、手套。
-    <br>请根据每个人说的话得出最终答案。</h2>
+  <h2>小丽、小玲、小娟三个人一起去商场里买东西。她们买了发夹、裙子、手套。
+  请根据每个人说的话得出最终答案。</h2>
   <h3>注意：每个人都说了一半真话，一半假话！</h3>
   <span1>小丽说：“</span1>
   <span id="tip1">小玲买的不是手套</span>
