--- a/index.html
+++ b/index.html
@@ -1,49 +1,303 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>逻辑小游戏</title>
-  <script src="script.js">
-  </script>
-  <style>
-  body{
-    font-family: Georgia, "Times New Roman",
-          Times, serif;
-   color: purple;
-   line-height:30px;
-   font-size:30px;
-   background-color: azure;
- text-align:center}
-   h1{color:black;
-     font-size:30px}
-   h2{line-height:35px;
-   font-size:32px}
-   h3{color:red;
-   font-size:24px}
-   span{line-height:50px}
-   button{margin-left: 5em;
-     margin-right: 5em;
-     margin-top: 1em;
-     margin-bottom: 1em;
- font-size:25px}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Hello, world!</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+<!--Navigation-->
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+ <div class="container-fluid">
+   <a class="navbar-brand" href="#">新地标——原创音乐社区</a>
+<!--button-->
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+   </button>
+   <div class="collapse navbar-collapse" id="navbarScroll">
+
+<!--list的样式-->
+ <ul class="nav nav-pills ml-auto">
+ <li class="nav-item">
+   <a class="nav-link" href="#">首页</a>
+ </li>
+ <li class="nav-item">
+   <a class="nav-link" href="登陆.html">登陆</a>
+ </li>
+ <li class="nav-item">
+   <a class="nav-link" href="#">社区</a>
+ </li>
+ <li class="nav-item dropdown">
+   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">我的</a>
+   <div class="dropdown-menu">
+     <a class="dropdown-item" href="AboutMe.html">创作中心</a>
+     <a class="dropdown-item" href="#">消息</a>
+     <a class="dropdown-item" href="#">历史</a>
+   </div>
+ </li>
+ </ul>
+     <form class="d-flex">
+       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+       <button class="btn btn-outline-success" type="submit">Search</button>
+     </form>
+   </div>
+ </div>
+</nav>
+
+<!--轮播图-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <!--indixator-->
+  <ul class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" aria-label="Slide 2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" aria-label="Slide 3"></li>
+  </ul>
+  <!--inner-->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="图片/轮播2.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption">
+        <h1 class="display-2">WELCOME</h1>
+        <h3>点击开启音乐之旅</h3>
+        <button type="button" class="btn btn-primary btn-lg">创作中心</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg">了解更多</button>
+    </div>
+  </div>
+    <div class="carousel-item">
+      <img src="图片/轮播1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="图片/轮播3.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+
+<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="sr-only">Next</span>
+</a>
+</div>
+
+<!-- welcome section-->
+<button class="fun" data-toggle="collapse" data-target="#section">点击了解社区介绍</button>
+<div id="section" class="collapse">
+  <div class="container-fluid">
+  <div class="row text-center">
+    <div class="col-12">
+      <h5 class="display-4">社区介绍</h5>
+    </div>
+    <div class="col-12">
+      <p class="lead">新地标原创音乐社区是一个满足于原创音乐人及爱好者需求的原创音乐交流平台。网站的定位为原创音乐人的家园！
+      一首优秀作品的实现，是不同的音乐人通力合作的结果，因此，网站将打造音乐人社区，在这里您可以搜索到您需要的乐手组建您自己的乐队，您也可以为了创作出好的音乐的需要，搜索到您需要的作词、作曲、编曲等等。
+      希望您在这里能够体会到家一样的温暖，寻找到您的热爱与坚持。
+  </div>
+  <div class="col-12 ">
+    <a href="#"><button type="button" class="btn btn-primary btn-lg btn-block">STRART</button>
+    </div>
+</div>
+</div>
+</div>
+
+<!--分割线-->
+<hr class="my-4">
+
+<!--中间三格文字-->
+  <div class="cards">
+  <div class="container-fluid">
+  <div class="row text-center">
+    <div class="col-12">
+      <h5 class="display-4">新地标社区</h5>
+    </div>
+    <div class="col-12">
+      <p class="lead">为您提供优质的原创音乐平台
+   </div>
+</div>
+
+    <div class="row text-center">
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">入驻音乐人</h5>
+            <p class="card-text">...位</p>
+            <br>
+            <a href="#" class="btn btn-primary">查看详情</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">入驻乐队</h5>
+            <p class="card-text">...队</p>
+            <br>
+            <a href="#" class="btn btn-primary">查看详情</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">原创音乐</h5>
+            <p class="card-text">...首</p>
+            <br>
+            <a href="#" class="btn btn-primary">查看详情</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--两个栅格-->
+<div class="paragraph"class="container-fluid">
+  <div class="row">
+   <div class="col-lg-6">
+     <h4>If you build it ...</h4>
+     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
+     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
+     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
+     <br>
+     <a href="#"class="btn btn-primary"class="shadow-lg p-3 mb-5 bg-white rounded">More Learn</a>
+   </div>
+   <div class="col-lg-6">
+     <img src="图片/2.jpg" class="img-fluid" >
+   </div>
+  </div>
+</div>
+</div>
+<br>
 
 
-   </style>
-</head>
-<body>
-  <h1>小小逻辑题，看看你的脑袋好使不</h1>
-  <h2>小丽、小玲、小娟三个人一起去商场里买东西。她们买了发夹、裙子、手套。
-  请根据每个人说的话得出最终答案。</h2>
-  <h3>注意：每个人都说了一半真话，一半假话！</h3>
-  <span1>小丽说：“</span1>
-  <span id="tip1">小玲买的不是手套</span>
-  <span>,小娟买的不是发夹。”</span><br>
-  <span2>小玲说：“小丽买的不是手套，</span2>
-  <span id="tip2">小娟买的是发夹。”</span><br>
-  <span3>小娟说：“</span3>
-  <span id=tip3>三个人买的东西都不一样</span>
-  <span>，小丽买的是裙子。”</span><br>
-  <button onclick="inputAnswer()">点击输入答案</button>
-  <button onclick="showTip1()">提示1</button>
-  <button onclick="showTip2()">提示2</button>
-  </html>
+<div class="contanier-fluid">
+  <div class="row text-center">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-code"></i>
+      <h3>Bootstrap</h3>
+      <p>cmdsijnjdcnvj</p>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <i class="fas fa-code"></i>
+      <h3>HTML5</h3>
+      <p>cmdsijnjdcnvj</p>
+    </div>
+    <div class="col-xs-12 col-md-4">
+     <i class="fab fa-css3"></i>
+     <h3>CSS3</h3>
+     <p>neincjein</p>
+   </div>
+ </div>
+</div>
+
+<!--卡片-->
+<div class="section section-2">
+<div class="cards">
+<div class="row row-cols-1 row-cols-md-4">
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h1 class="display-5">Bootstrap</h1>
+          <h3>Complete Website</h3>
+      </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h1 class="display-5">Bootstrap</h1>
+          <h3>Complete Website</h3>
+        </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h1 class="display-5">Bootstrap</h1>
+          <h3>Complete Website</h3>
+        </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h1 class="display-5">Bootstrap</h1>
+          <h3>Complete Website</h3>
+        </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
+<!--背景图固定-->
+<figure>
+<div class="fixed-wrap">
+  <div id="fixed">
+  </div>
+</div>
+</figure>
+  </body>
+</html>
+
+<!--connect-->
+<div class="container-fluid">
+  <div class="row text-center">
+    <div class="col-12">
+      <h2>Connect</h2>
+    </div>
+    <div class="col-12 social">
+      <a href="#"><i class="..."></i></a>
+    </div>
+  </div>
+</div>
+
+<!--footer-->
+<footer>
+  <div class="contanier-fluid">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img src="...">
+        <hr class="light">
+        <p>555-555-5555</p>
+        <p>email.myemail.com</p>
+        <p>100 Street Nsme</p>
+        <p>City,State,00000</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light">
+        <h5>Our hours</h5>
+        <hr class="light">
+        <p>Monday:9am-5pm</p>
+        <p>Sturtday:10am-4pm</p>
+        <p>Sunday:closed</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light">
+        <h5>Services</h5>
+        <hr class="light">
+        <p>City, State, 00000</p>
+        <p>City, State, 00000</p>
+        <p>City, State, 00000</p>
+      </div>
+
+    </div>
+  </div>
+</footer>
