--- a/My Website/index.html
+++ b/My Website/index.html
@@ -95,7 +95,7 @@
   <div class="container-fluid">
   <div class="row text-center">
     <div class="col-12">
-      <h5 class="display-4">社区介绍</h5>
+      <h4 class="display-4">社区介绍</h4>
     </div>
     <div class="col-12">
       <p class="lead">新地标原创音乐社区是一个满足于原创音乐人及爱好者需求的原创音乐交流平台。网站的定位为原创音乐人的家园！
@@ -117,7 +117,7 @@
   <div class="container-fluid">
   <div class="row text-center">
     <div class="col-12">
-      <h5 class="display-4">新地标社区</h5>
+      <h4 class="title">新地标社区</h4>
     </div>
     <div class="col-12">
       <p class="lead">为您提供优质的原创音乐平台
@@ -128,7 +128,7 @@
       <div class="col-sm-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">入驻音乐人</h5>
+            <h4 class="card-title">入驻音乐人</h4>
             <p class="card-text">...位</p>
             <br>
             <a href="#" class="btn btn-primary">查看详情</a>
@@ -138,7 +138,7 @@
       <div class="col-sm-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">入驻乐队</h5>
+            <h4 class="card-title">入驻乐队</h4>
             <p class="card-text">...队</p>
             <br>
             <a href="#" class="btn btn-primary">查看详情</a>
@@ -148,7 +148,7 @@
       <div class="col-sm-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">原创音乐</h5>
+            <h4 class="card-title">原创音乐</h4>
             <p class="card-text">...首</p>
             <br>
             <a href="#" class="btn btn-primary">查看详情</a>
@@ -158,25 +158,112 @@
     </div>
   </div>
 </div>
-
+<br>
 <!--两个栅格-->
-<div class="paragraph"class="container-fluid">
+<br>
+<div class="container-fluid">
+<div class="row text-center">
+  <div class="col-12">
+    <h4 class="title">今日推荐</h4>
+  </div>
+  <div class="col-12">
+    <p class="lead">为您推荐优秀的原创音乐人与原创歌曲
+</div>
+</div>
+<div class="paragraph1"class="container-fluid">
   <div class="row">
    <div class="col-lg-6">
-     <h4>If you build it ...</h4>
-     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
-     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
-     <p>Lorem Ipsum is simply home sourse here competation mountain house mouth there he is burger. However he is died with the cold weather.</p>
+     <h4>今日推荐</h4>
+       <h3>原创音乐人</h3>
+       <h5>痛仰乐队</h5>
+     <p>“在路上汲取营养，凝结成歌，集结成辑，然后再上路散播能量，这是痛仰喜爱并擅长的。”</p>
+     <p>痛仰乐队（Miserable Faith）曾经和夜叉、扭曲的机器及舌头一起被誉为中国摇滚的“四大硬核”之一。代表作品有《再见杰克》《公路之歌》《西湖》《今日青年》《为你唱首歌》《不要停止我的音乐》等。2020年9月起，痛仰乐队以“二十四城记”为主题在中国24个城市进行巡回演出。</p>
      <br>
-     <a href="#"class="btn btn-primary"class="shadow-lg p-3 mb-5 bg-white rounded">More Learn</a>
+     <a href="#"class="btn btn-primary"class="shadow-lg p-3 mb-5 bg-white rounded">了解更多</a>
    </div>
    <div class="col-lg-6">
-     <img src="图片/2.jpg" class="img-fluid" >
+     <img src="图片/推荐1.jpg" class="img-fluid" >
    </div>
   </div>
 </div>
 </div>
+</div>
 <br>
+
+<div class="paragraph2"class="container-fluid">
+  <div class="row">
+    <div class="col-lg-6">
+      <img src="图片/推荐2.jpg" class="img-fluid" >
+    </div>
+   <div class="col-lg-6">
+     <h4>今日推荐</h4>
+     <h3>原创音乐</h3>
+     <h5>《酒精挥发后》</h5>
+     <p>人类的情感在酒精的催化下变得愈发敏感且脆弱，那一阵的晕眩可能才是真实的世界。</p>
+     <p>“太多的太多的事与愿违 我都想弄清原委 他们说他们说都无所谓 你不同拼命去追”</p>
+     <br>
+     <a href="#"class="btn btn-primary"class="shadow-lg p-3 mb-5 bg-white rounded">了解更多</a>
+   </div>
+  </div>
+</div>
+</div>
+
+<!--卡片-->
+<div class="container-fluid">
+<div class="row text-center">
+  <div class="col-12">
+    <h4 class="title">热门单曲</h4>
+  </div>
+  <div class="col-12">
+    <p class="lead">根据您的喜好为您推荐最适合的歌曲
+</div>
+</div>
+
+<div class="section section-2">
+<div class="row row-cols-1 row-cols-md-4">
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/卡片1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h3>专辑名称</h3>
+      </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/卡片2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h3>专辑名称</h3>
+        </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/卡片3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h3>专辑名称</h3>
+        </div>
+    </div>
+  </div>
+</div>
+  <div class="col-mb-4 col-sm-6">
+    <div class="card">
+      <img src="图片/卡片4.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <div class="carousel-caption">
+          <h3>专辑名称</h3>
+        </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
 
 
 <div class="contanier-fluid">
@@ -199,57 +286,6 @@
  </div>
 </div>
 
-<!--卡片-->
-<div class="section section-2">
-<div class="cards">
-<div class="row row-cols-1 row-cols-md-4">
-  <div class="col-mb-4 col-sm-6">
-    <div class="card">
-      <img src="图片/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="carousel-caption">
-          <h1 class="display-5">Bootstrap</h1>
-          <h3>Complete Website</h3>
-      </div>
-    </div>
-  </div>
-</div>
-  <div class="col-mb-4 col-sm-6">
-    <div class="card">
-      <img src="图片/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="carousel-caption">
-          <h1 class="display-5">Bootstrap</h1>
-          <h3>Complete Website</h3>
-        </div>
-    </div>
-  </div>
-</div>
-  <div class="col-mb-4 col-sm-6">
-    <div class="card">
-      <img src="图片/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="carousel-caption">
-          <h1 class="display-5">Bootstrap</h1>
-          <h3>Complete Website</h3>
-        </div>
-    </div>
-  </div>
-</div>
-  <div class="col-mb-4 col-sm-6">
-    <div class="card">
-      <img src="图片/3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="carousel-caption">
-          <h1 class="display-5">Bootstrap</h1>
-          <h3>Complete Website</h3>
-        </div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-</div>
 
 <!--背景图固定-->
 <figure>
@@ -289,7 +325,7 @@
       </div>
       <div class="col-md-4">
         <hr class="light">
-        <h5>Our hours</h5>
+        <h6>Our hours</h6>
         <hr class="light">
         <p>Monday:9am-5pm</p>
         <p>Sturtday:10am-4pm</p>
@@ -297,7 +333,7 @@
       </div>
       <div class="col-md-4">
         <hr class="light">
-        <h5>Services</h5>
+        <h6>Services</h6>
         <hr class="light">
         <p>City, State, 00000</p>
         <p>City, State, 00000</p>
@@ -305,7 +341,7 @@
       </div>
 <div class="col-12">
   <hr class="light">
-  <h5>copy right:email.com</h5>
+  <h6>copy right:email.com</h6>
 </div>
     </div>
   </div>
