--- a/My Website/index.html
+++ b/My Website/index.html
@@ -34,7 +34,7 @@
  <li class="nav-item dropdown">
    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">我的</a>
    <div class="dropdown-menu">
-     <a class="dropdown-item" href="AboutMe.html">创作中心</a>
+     <a class="dropdown-item" href="HomePage.html">创作中心</a>
      <a class="dropdown-item" href="#">消息</a>
      <a class="dropdown-item" href="#">历史</a>
    </div>
@@ -64,7 +64,7 @@
       <div class="carousel-caption">
         <h1 class="display-4">WELCOME</h1>
         <h3 class=font2>点击开启音乐之旅</h3>
-        <button type="button" class="btn btn-primary btn-lg">创作中心</button>
+        <a href="HomePage.html">  <button type="button1"class="btn btn-primary btn-lg">创作中心</button></a>
         <button type="button" class="btn btn-outline-secondary btn-lg">了解更多</button>
     </div>
   </div>
@@ -294,8 +294,6 @@
   </div>
 </div>
 </figure>
-  </body>
-</html>
 
 <!--connect-->
 <div class="container-fluid">
@@ -346,3 +344,6 @@
     </div>
   </div>
 </footer>
+
+</body>
+</html>
